--- a/lispref/ChangeLog
+++ b/lispref/ChangeLog
@@ -1,5 +1,8 @@
 2004-05-30  Richard M. Stallman  <rms@gnu.org>
 
+	* loading.texi (Named Features): Clarify return value
+	and meaning of NOERROR.
+
 	* variables.texi (File Local Variables): Minor cleanup.
 
 2004-05-30  Michael Albinus  <michael.albinus@gmx.de>
