--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-30  Andreas Schwab  <schwab@suse.de>
+
+	* dired.el (dired-get-filename): Don't use dired-re-dot.
+
 2004-05-30  Richard M. Stallman  <rms@gnu.org>
 
 	* files.el (find-file): Doc fix.
