--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-02  Kim F. Storm  <storm@cua.dk>
+
+	* frame.el (blink-cursor-start): Turn cursor off initially so blink
+	starts after blink-cursor-delay rather than 2*blink-cursor-delay.
+
 2004-05-31  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* vc-arch.el (vc-arch-state): Don't assume the file exists.
