--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,17 @@
+2004-06-02  Juanma Barranquero  <lektu@terra.es>
+
+	* faces.el (frame-update-faces): Add empty docstring so the one
+	for `ignore' doesn't show through.
+
+	* subr.el (process-kill-without-query): Remove spurious "\n" on
+	obsolescence string.
+	(focus-frame, unfocus-frame): Add obsolescence declaration and
+	empty docstring.
+
+	* international/mule.el (register-char-codings): Make alias for
+	`ignore'.  Move docstring to obsolescence info and remove
+	redundancy.
+
 2004-06-02  Kim F. Storm  <storm@cua.dk>
 
 	* frame.el (blink-cursor-start): Turn cursor off initially so blink
@@ -229,8 +243,10 @@
 2004-05-28  Juanma Barranquero  <lektu@terra.es>
 
 	* cus-edit.el (customize-face, customize-face-other-window)
-	(custom-face-edit-delete): Make arguments match their use in docstring.
-	(custom-unloaded-symbol-p, custom-unloaded-widget-p): Docstring typo.
+	(custom-face-edit-delete): Make arguments match their use in
+	docstring.
+	(custom-unloaded-symbol-p, custom-unloaded-widget-p): Fix typo in
+	docstring.
 
 	* cvs-status.el (cvs-tree-merge, cvs-tags->tree): Use `butlast',
 	not `cvs-butlast'.
@@ -705,7 +721,8 @@
 
 2004-05-11  Juanma Barranquero  <lektu@terra.es>
 
-	* custom.el (custom-initialize-default, defcustom): Typo in docstring.
+	* custom.el (custom-initialize-default, defcustom):
+	Fix typo in docstring.
 
 	* files.el (set-visited-file-name, file-expand-wildcards):
 	Fix docstring.
