Revision: miles@gnu.org--gnu-2004/emacs--cvs-trunk--0--patch-363
(read-number): Use canonical format for default in prompt.

2004-06-03  Miles Bader  <miles@gnu.org>

   * lisp/subr.el (read-number): Use canonical format for default in prompt.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,7 @@
 2004-06-03  Miles Bader  <miles@gnu.org>
 
+	* subr.el (read-number): Use canonical format for default in prompt.
+
 	* minibuf-eldef.el (minibuffer-default-in-prompt-regexps): Add
 	regexp for " [...]" style defaults.
 
