--- a/nt/ChangeLog
+++ b/nt/ChangeLog
@@ -1,3 +1,9 @@
+2004-06-04  Juanma Barranquero  <lektu@terra.es>
+
+	* INSTALL: Reword the section on image support.  Add reference to
+	GnuWin32.  Mention problems when mixing binaries from different
+	compilers.
+
 2004-05-06  Jason Rumney  <jasonr@gnu.org>
 
 	* configure.bat: Use -mno-cygwin to check for image libraries
