--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,10 @@
+2004-06-03  Karl Fogel  <kfogel@red-bean.com>
+
+	* vc-svn.el (vc-svn-checkin): Use 'nconc' instead of 'list*',
+	because the latter is a CL-ism.  This fixes the bug reported by
+	Shawn Boyette <mdxi@collapsar.net> in 
+        http://lists.gnu.org/archive/html/emacs-devel/2004-05/msg00442.html.
+
 2004-06-04  Miles Bader  <miles@gnu.org>
 
 	* faces.el (face-differs-from-default-p): Use a different
