Revision: miles@gnu.org--gnu-2004/emacs--cvs-trunk--0--patch-370
Move `display-supports-face-attributes-p' entirely into C code

Previously only the tty-related portion of display-supports-face-attributes-p
was done in C.  This just moves the graphical-display related bits into C
too, which allows us to implement them properly (the previous attempt to do a
halfway-proper job in lisp didn't work because of funny conditions during
emacs startup).

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -7,6 +7,14 @@
 
 2004-06-04  Miles Bader  <miles@gnu.org>
 
+	* faces.el (display-supports-face-attributes-p): Function moved to
+	C code.  Previously only the tty-related portion of this function
+	was done in C; however the previous attempt to do a halfway-proper
+	job for non-tty displays in lisp didn't work properly because of
+	funny conditions during emacs startup.
+
+2004-06-04  Miles Bader  <miles@gnu.org>
+
 	* faces.el (face-differs-from-default-p): Use a different
 	implementation, so we can really check whether FACE displays
 	differently or not.
