--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2004-06-04  Eli Zaretskii  <eliz@gnu.org>
+
+	* xfaces.c (x_supports_face_attributes_p): Make this function
+	conditional on HAVE_WINDOW_SYSTEM.
+	(Fdisplay_supports_face_attributes_p) [HAVE_WINDOW_SYSTEM]: Don't
+	call x_supports_face_attributes_p if it was not compiled in.
+
 2004-06-04  Miles Bader  <miles@gnu.org>
 
 	* xfaces.c (tty_supports_face_attributes_p): New function, mostly
