--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-05  Matt Hodges  <matt@stchem.bham.ac.uk>  (tiny change)
+
+	* textmodes/table.el: Sentence commands added to Point Motion
+	group; kill and backward-kill commands added to Extraction group.
+
 2004-06-04  Mario Lang  <mlang@delysid.org>
 
 	* battery.el (battery-linux-proc-acpi): mA was hardcored, but some
@@ -9,7 +14,7 @@
 
 	* vc-svn.el (vc-svn-checkin): Use 'nconc' instead of 'list*',
 	because the latter is a CL-ism.  This fixes the bug reported by
-	Shawn Boyette <mdxi@collapsar.net> in 
+	Shawn Boyette <mdxi@collapsar.net> in
         http://lists.gnu.org/archive/html/emacs-devel/2004-05/msg00442.html.
 
 2004-06-04  Miles Bader  <miles@gnu.org>
