--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -10,7 +10,7 @@
 	division-by-zero bug while at it, and handle kernels with
 	a slightly different layout in /proc/acpi.
 
-2004-06-03  Karl Fogel  <kfogel@red-bean.com>
+2004-06-04  Karl Fogel  <kfogel@red-bean.com>
 
 	* vc-svn.el (vc-svn-checkin): Use 'nconc' instead of 'list*',
 	because the latter is a CL-ism.  This fixes the bug reported by
@@ -23,7 +23,7 @@
 	C code.  Previously only the tty-related portion of this function
 	was done in C; however the previous attempt to do a halfway-proper
 	job for non-tty displays in lisp didn't work properly because of
-	funny conditions during emacs startup.
+	funny conditions during Emacs startup.
 	(face-differs-from-default-p): Simplify, now that
 	display-supports-face-attributes-p works properly on all display
 	types.  Remove :stipple from comparison; it doesn't really work
@@ -243,7 +243,7 @@
 	* thumbs.el (thumbs-show-name): Do nothing if no image at point.
 	(thumbs-mouse-find-image): New command.
 	(thumbs-mode-map): Bind it to mouse-2.
-	(thumbs-mode):  Make mode-class special.
+	(thumbs-mode): Make mode-class special.
 	(thumbs-view-image-mode): Likewise.
 
 2004-05-29  Pavel Kobiakov  <pk_at_work@yahoo.com>
@@ -1432,7 +1432,7 @@
 	(sql-connect-postgres): Add username prompt.
 	(sql-imenu-generic-expression, sql-mode-font-lock-object-name):
 	Make patterns less product specific.
-	(sql-xemacs-p, sql-emacs19-p): Add flags for emacs variants.
+	(sql-xemacs-p, sql-emacs19-p): Add flags for Emacs variants.
 	(sql-mode-abbrev-table): Modify initialization.
 	(sql-builtin-face): Add variable.
 	(sql-keywords-re): Add macro.
@@ -6431,7 +6431,7 @@
 	(ffap-file-at-point): Use the new regexp to strip the prompts from
 	the file names.  This is an issue mostly for user prompts that
 	don't have a trailing space and find-file-at-point is invoked from
-	within a shell inside emacs.
+	within a shell inside Emacs.
 
 2003-09-24  Andre Spiegel  <spiegel@gnu.org>
 
