--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-05  Juanma Barranquero  <lektu@terra.es>
+
+	* keymap.c (Fdescribe_vector): Fix docstring.
+	(Fkey_description, Fglobal_key_binding): Fix typo in docstring.
+
 2004-06-05  Miles Bader  <miles@gnu.org>
 
 	* xfaces.c (tty_supports_face_attributes_p): Make sure the specified
