*** empty log message ***

--- a/leim/ChangeLog
+++ b/leim/ChangeLog
@@ -1,7 +1,7 @@
 2004-06-05  Kenichi Handa  <handa@m17n.org>
 
-	* Makefile.in (leim-list.el): Depends on leim-ext.el.   Appends
-	the contents off leim-ext.el to leim-list.el.
+	* Makefile.in (leim-list.el): Depend on leim-ext.el.  Append the
+	contents of leim-ext.el to leim-list.el.
 
 	* leim-ext.el: New file.
 
