--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-05  Andreas Schwab  <schwab@suse.de>
+
+	* macfns.c (x_create_tip_frame): Fix declaration after statement.
+
 2004-06-05  Juanma Barranquero  <lektu@terra.es>
 
 	* keymap.c (Fdescribe_vector): Fix docstring.
