--- a/lispref/ChangeLog
+++ b/lispref/ChangeLog
@@ -1,3 +1,11 @@
+2004-06-05  Richard M. Stallman  <rms@gnu.org>
+
+	* minibuf.texi (Minibuffer Completion): For INITIAL arg,
+	refer the user to the Initial Input node.
+	(Text from Minibuffer): Likewise.
+	(Initial Input): New node.  Document this feature
+	and say it is mostly deprecated.
+
 2004-05-30  Richard M. Stallman  <rms@gnu.org>
 
 	* loading.texi (Named Features): Clarify return value
