--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,11 @@
+2004-06-05  Lars Hansen  <larsh@math.ku.dk>
+
+	* dired-x.texi (variable dired-omit-mode): Rename from
+	dired-omit-files-p.
+	(function dired-omit-mode): Rename from dired-omit-toggle.
+	Call dired-omit-mode rather than set dired-omit-files-p.
+	(dired-mark-omitted): Describe command.
+
 2004-05-29  Michael Albinus  <michael.albinus@gmx.de>
 
 	Version 2.0.41 of Tramp released.
