--- a/nt/ChangeLog
+++ b/nt/ChangeLog
@@ -1,5 +1,10 @@
 2004-06-06  Juanma Barranquero  <lektu@terra.es>
 
+	* makefile.w32-in (bootstrap-nmake): When nmake'ing bootstrap on
+	the lisp/ directory, set SHELL to $(SHELLTYPE); this avoids
+	calling non-existent cmdproxy.exe on boostrappings after a
+	previous install followed by realclean.
+
 	* nmake.defs: Add quote in comment to resync font-locking.
 
 2004-06-04  Juanma Barranquero  <lektu@terra.es>
