*** empty log message ***

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,40 @@
+2004-06-05  Luc Teirlinck  <teirllm@auburn.edu>
+
+	* find-dired.el (find-ls-subdir-switches): New user option.
+	(find-dired): No longer call `abbreviate-file-name' on DIR.
+	Set `dired-subdir-switches' buffer-locally.
+
+	* locate.el: Merge the two `Commentary' sections.
+	(locate-ls-subdir-switches): New user option.
+	(locate): Update for other changes.
+	(locate-mode-map): Restore Dired binding for mouse-2.
+	Bind `locate-mouse-view-file' to M-mouse-2.
+	Bind `l' to `locate-do-redisplay'.
+	(locate-main-listing-line-p, locate-do-redisplay): New functions.
+	(locate-mouse-view-file, locate-tags, locate-find-directory):
+	Print message if used outside main listing.
+	(locate-mode): Update docstring.  Make `*Locate*' buffer read-only.
+	Various changes to support inserted subdirectories.
+	(locate-insert-header): Change header of *Locate* buffer.
+
+	* dired-aux.el (dired-do-redisplay, dired-maybe-insert-subdir):
+	Change interactive default switches.
+	(dired-rename-subdir-2): Update `dired-switches-alist'.
+	(dired-insert-subdir, dired-kill-subdir):
+	Handle `dired-switches-alist'.  Do not mark buffer modified.
+	(dired-insert-subdir-validate): Handle `dired-subdir-switches'.
+	(dired-insert-subdir-doinsert): Omit messages.
+	Handle `dired-subdir-switches'.
+	(dired-hide-subdir, dired-hide-all): Do not mark buffer modified.
+
+	* dired.el (dired-subdir-switches, dired-switches-alist):
+	New vars.
+	(dired-insert-old-subdirs): Do not repeatedly delete and reinsert
+	subdirs if -R switch is used for a subdir.
+	(dired-mode): Set `dired-switches-alist'.
+	(dired-build-subdir-alist): Only print number of directories in
+	echo area when invoked interactively.
+
 2004-06-05  Lars Hansen  <larsh@math.ku.dk>
 
 	* dired-x.el (dired-omit-mode): Rename from
